BBPS transaction phase-1
